--- a/styles/main.css
+++ b/styles/main.css
@@ -4,7 +4,7 @@
     background: #9999CC;
     color: #f5f5f5;
     padding: 5px;
-    width: 19%;
+    width: 17.5%;
 }
 
 #formWrapper input{
@@ -45,3 +45,8 @@
 .nothingFound{
     color: red;
 }
+
+#closeButton{
+    color: red;
+}
+
